web: Fix code blocks line wrapping.

--- a/wikked/assets/css/wikked/main.less
+++ b/wikked/assets/css/wikked/main.less
@@ -37,7 +37,6 @@ code {
     font-size: 90%;
     color: @code-color;
     background-color: @code-bg;
-    white-space: nowrap;
     border-radius: 4px;
     font-family: Menlo,Monaco,Consolas,"Courier New",monospace;
 }
